# cfd-hemodynamic

./: .gitattributes  .gitignore  CLAUDE.md  DIAGNOSTICS.md  Dockerfile  IPCS-A-DG.ipynb  IPCS-A.ipynb  README.md  bibliography.bib  bibliography_clean.bib  convergence_data.csv  edges.json  ffr_resistance_dataset.csv  ffr_resistencia_literatura.tex  hola.brep  hola.geo  job.sh  limitaciones _modelo_simplificaciones.txt  main.py  main.tex  nodes  nodes.json  nodes_types.json  notas.txt  notebook_to_py.ipynb  otros_modelos.txt  pack_for_hpc.sh  predictions.csv  pyproject.toml  pyrefly.toml  refs.bib  requirements.txt  singularity.def  slides.nav  slides.tex  solver1.py  todo.txt  treeToMesh.py  vascular_tree.msh  vascusnth_process.txt
.ipynb_checkpoints/: IPCS-A-checkpoint.ipynb
figures/: flujo_severity_alto_estado_estacionario.tiff  flujo_severity_alto_slope_alto.tiff  flujo_severity_alto_slope_bajo.tiff  flujo_severity_bajo_slope_alto.tiff  flujo_severity_bajo_slope_bajo.tiff  geometria_arteria.tiff  geometria_arteria_structured.tiff  presion_dist.tiff  tree_streamlines.tiff
lid_driven2D/: a.py  ipcs.ipynb
meshes/: pipe_cylinder.h5  pipe_cylinder.xdmf
p.bp/: data.0  md.0  md.idx  profiling.json
pipe_with_cylinder/: ipcs.ipynb
scripts/: compute_flow_ratio.py  extract_convergence_data.sh  extract_ffr_dataset.py  extract_ffr_dataset_hpc.py  ffr_combine_models.py  ffr_gam.py  ffr_gam_compare.py  ffr_regression.py  ffr_resistance_correlation.py  ffr_sem.py  plot_convergence.py  run_simulations.sh  sampling_plan.csv  weighted_sampling.py
solvers/: solver2.py
(+200 files in other folders)
